# guppi-ai

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-22-host-environment-in-system-prompt.md
docs/superpowers/specs/: 2026-04-22-host-environment-in-system-prompt-design.md
src/guppi/: __init__.py  agent.py  cli.py  config.py  context.py  env.py  renderer.py
src/guppi/mcp/: __init__.py  client.py
src/guppi/skills/: __init__.py  loader.py  skill.py
src/guppi/tools/: __init__.py  registry.py
src/guppi/tools/builtin/: __init__.py  bash.py  files.py
